# HoloRoll

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/effects/HoloRoll/: holoroll_motion.jsfx  holoroll_spatial.jsfx
docs/: EXPORTER_FIX_SPEC.md  headless_install.md  third_party.md
installer/: holoroll.iss
scripts/: bootstrap.ps1  build_installer.ps1  diagnose_glb.py
src/core/: animation_library.cpp  animation_library.h  byte_swap.h  config_store.cpp  config_store.h  folder_watcher.cpp  folder_watcher.h  glb_loader.cpp  glb_loader.h  mdd_data_manager.cpp  mdd_data_manager.h  motion_events.cpp  motion_events.h  obj_index_loader.cpp  obj_index_loader.h  viewport_poses.h
src/extension/: drop_target.cpp  drop_target.h  entry.cpp  folder_picker.cpp  folder_picker.h  reaper_api.h  reaper_bridge.cpp  reaper_bridge.h  socket_server.cpp  socket_server.h  updater.cpp  updater.h  version.h
src/render/: gl_viewport.cpp  gl_viewport.h
